lab2/Code/syntax.output
State 29 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier error
    6       | Specifier SEMI
    7       | error SEMI
    8       | Specifier FunDec CompSt
    9       | Specifier FunDec SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList
   13           | VarDec error

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT OptTag LC error RC

   19 OptTag: %empty
   20       | ID

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB
   25       | VarDec LB error

   26 FunDec: ID LP VarList RP
   27       | ID LP RP
   28       | ID LP error RP
   29       | error LP VarList RP

   30 VarList: ParamDec COMMA VarList
   31        | ParamDec

   32 ParamDec: Specifier VarDec

   33 CompSt: LC DefList StmtList RC
   34       | LC error RC

   35 StmtList: %empty
   36         | Stmt StmtList

   37 Stmt: Exp SEMI
   38     | Exp error SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt
   44     | error SEMI
   45     | Exp error
   46     | RETURN Exp error
   47     | RETURN error SEMI

   48 DefList: %empty
   49        | Def DefList

   50 Def: Specifier DecList SEMI
   51    | Specifier error SEMI

   52 DecList: Dec
   53        | Dec COMMA DecList
   54        | Dec error DecList
   55        | Dec error

   56 Dec: VarDec
   57    | VarDec ASSIGNOP Exp
   58    | VarDec ASSIGNOP error

   59 Exp: Exp ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID LP Args RP
   71    | ID LP RP
   72    | Exp LB Exp RB
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT
   77    | OCT
   78    | HEX
   79    | Exp ASSIGNOP error
   80    | Exp AND error
   81    | Exp OR error
   82    | Exp RELOP error
   83    | Exp PLUS error
   84    | Exp MINUS error
   85    | Exp STAR error
   86    | Exp DIV error
   87    | LP error RP
   88    | MINUS error
   89    | NOT error
   90    | ID LP error RP
   91    | ID LP error SEMI
   92    | Exp LB error RB
   93    | Exp LB error SEMI

   94 Args: Exp COMMA Args
   95     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 7 12 13 18 24 25 28 29 34 38 44 45 46 47 51 54 55 58 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    INT <node> (258) 23 75
    OCT <node> (259) 77
    HEX <node> (260) 78
    FLOAT <node> (261) 76
    SEMI <node> (262) 4 6 7 9 37 38 40 44 47 50 51 91 93
    COMMA <node> (263) 11 30 53 94
    LC <node> (264) 16 18 33 34
    RC <node> (265) 16 18 33 34
    STRUCT <node> (266) 16 17 18
    RETURN <node> (267) 40 46 47
    IF <node> (268) 41 42
    WHILE <node> (269) 43
    TYPE <node> (270) 14
    ID <node> (271) 20 21 22 26 27 28 70 71 73 74 90 91
    LOWER_THAN_ELSE <node> (272)
    ELSE <node> (273) 42
    ASSIGNOP <node> (274) 57 58 59 79
    OR <node> (275) 61 81
    AND <node> (276) 60 80
    RELOP <node> (277) 62 82
    PLUS <node> (278) 63 83
    MINUS <node> (279) 64 68 84 88
    STAR <node> (280) 65 85
    DIV <node> (281) 66 86
    NOT <node> (282) 69 89
    LP <node> (283) 26 27 28 29 41 42 43 67 70 71 87 90 91
    RP <node> (284) 26 27 28 29 41 42 43 67 70 71 87 90
    LB <node> (285) 23 24 25 72 92 93
    RB <node> (286) 23 24 72 92
    DOT <node> (287) 73


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Program <node> (34)
        on left: 1
        on right: 0
    ExtDefList <node> (35)
        on left: 2 3
        on right: 1 3
    ExtDef <node> (36)
        on left: 4 5 6 7 8 9
        on right: 3
    ExtDecList <node> (37)
        on left: 10 11 12 13
        on right: 4 11 12
    Specifier <node> (38)
        on left: 14 15
        on right: 4 5 6 8 9 32 50 51
    StructSpecifier <node> (39)
        on left: 16 17 18
        on right: 15
    OptTag <node> (40)
        on left: 19 20
        on right: 16 18
    Tag <node> (41)
        on left: 21
        on right: 17
    VarDec <node> (42)
        on left: 22 23 24 25
        on right: 10 11 12 13 23 24 25 32 56 57 58
    FunDec <node> (43)
        on left: 26 27 28 29
        on right: 8 9
    VarList <node> (44)
        on left: 30 31
        on right: 26 29 30
    ParamDec <node> (45)
        on left: 32
        on right: 30 31
    CompSt <node> (46)
        on left: 33 34
        on right: 8 39
    StmtList <node> (47)
        on left: 35 36
        on right: 33 36
    Stmt <node> (48)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 36 41 42 43
    DefList <node> (49)
        on left: 48 49
        on right: 16 33 49
    Def <node> (50)
        on left: 50 51
        on right: 49
    DecList <node> (51)
        on left: 52 53 54 55
        on right: 50 53 54
    Dec <node> (52)
        on left: 56 57 58
        on right: 52 53 54 55
    Exp <node> (53)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 37 38 40 41 42 43 45 46 57 59 60 61 62 63 64 65 66 67 68 69 72 73 79 80 81 82 83 84 85 86 92 93 94 95
    Args <node> (54)
        on left: 94 95
        on right: 70 94


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag
   18                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . error
    6       | Specifier . SEMI
    8       | Specifier . FunDec CompSt
    9       | Specifier . FunDec SEMI

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   20 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 21 (Tag)


State 11

   16 StructSpecifier: STRUCT OptTag . LC DefList RC
   18                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

    5 ExtDef: Specifier error .
   29 FunDec: error . LP VarList RP

    LP  shift, and go to state 22

    $default  reduce using rule 5 (ExtDef)


State 16

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 17

   22 VarDec: ID .
   26 FunDec: ID . LP VarList RP
   27       | ID . LP RP
   28       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 22 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error ExtDecList
   13           | VarDec . error
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   25       | VarDec . LB error

    error  shift, and go to state 25
    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    SEMI  reduce using rule 10 (ExtDecList)


State 20

    8 ExtDef: Specifier FunDec . CompSt
    9       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 28
    LC    shift, and go to state 29

    CompSt  go to state 30


State 21

   16 StructSpecifier: STRUCT OptTag LC . DefList RC
   18                | STRUCT OptTag LC . error RC

    error   shift, and go to state 31
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 48 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   29 FunDec: error LP . VarList RP

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 23

   26 FunDec: ID LP . VarList RP
   27       | ID LP . RP
   28       | ID LP . error RP

    error   shift, and go to state 38
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    RP      shift, and go to state 39

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   12 ExtDecList: VarDec error . ExtDecList
   13           | VarDec error .

    ID  shift, and go to state 41

    $default  reduce using rule 13 (ExtDecList)

    ExtDecList  go to state 42
    VarDec      go to state 19


State 26

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 43
    VarDec      go to state 19


State 27

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . error RB
   25       | VarDec LB . error

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 28

    9 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 9 (ExtDef)


State 29

   33 CompSt: LC . DefList StmtList RC
   34       | LC . error RC

    error   shift, and go to state 46
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 48 (DefList)]
    INT     reduce using rule 48 (DefList)
    OCT     reduce using rule 48 (DefList)
    HEX     reduce using rule 48 (DefList)
    FLOAT   reduce using rule 48 (DefList)
    LC      reduce using rule 48 (DefList)
    RC      reduce using rule 48 (DefList)
    RETURN  reduce using rule 48 (DefList)
    IF      reduce using rule 48 (DefList)
    WHILE   reduce using rule 48 (DefList)
    ID      reduce using rule 48 (DefList)
    MINUS   reduce using rule 48 (DefList)
    NOT     reduce using rule 48 (DefList)
    LP      reduce using rule 48 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 34


State 30

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 31

   18 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 48


State 32

   50 Def: Specifier . DecList SEMI
   51    | Specifier . error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 41

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 33

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 34

   49 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 48 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 34


State 35

   32 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 55


State 36

   29 FunDec: error LP VarList . RP

    RP  shift, and go to state 56


State 37

   30 VarList: ParamDec . COMMA VarList
   31        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 31 (VarList)


State 38

   28 FunDec: ID LP error . RP

    RP  shift, and go to state 58


State 39

   27 FunDec: ID LP RP .

    $default  reduce using rule 27 (FunDec)


State 40

   26 FunDec: ID LP VarList . RP

    RP  shift, and go to state 59


State 41

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 42

   12 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   24 VarDec: VarDec LB error . RB
   25       | VarDec LB error .

    RB  shift, and go to state 60

    $default  reduce using rule 25 (VarDec)


State 45

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 61


State 46

   34 CompSt: LC error . RC

    RC  shift, and go to state 62


State 47

   33 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 63
    INT     shift, and go to state 64
    OCT     shift, and go to state 65
    HEX     shift, and go to state 66
    FLOAT   shift, and go to state 67
    LC      shift, and go to state 29
    RETURN  shift, and go to state 68
    IF      shift, and go to state 69
    WHILE   shift, and go to state 70
    ID      shift, and go to state 71
    MINUS   shift, and go to state 72
    NOT     shift, and go to state 73
    LP      shift, and go to state 74

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 75
    StmtList  go to state 76
    Stmt      go to state 77
    Exp       go to state 78


State 48

   18 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 18 (StructSpecifier)


State 49

   51 Def: Specifier error . SEMI

    SEMI  shift, and go to state 79


State 50

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   25       | VarDec . LB error
   56 Dec: VarDec .
   57    | VarDec . ASSIGNOP Exp
   58    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 80
    LB        shift, and go to state 27

    $default  reduce using rule 56 (Dec)


State 51

   50 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 81


State 52

   52 DecList: Dec .
   53        | Dec . COMMA DecList
   54        | Dec . error DecList
   55        | Dec . error

    error  shift, and go to state 82
    COMMA  shift, and go to state 83

    SEMI  reduce using rule 52 (DecList)


State 53

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 54

   49 DefList: Def DefList .

    $default  reduce using rule 49 (DefList)


State 55

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   25       | VarDec . LB error
   32 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 32 (ParamDec)


State 56

   29 FunDec: error LP VarList RP .

    $default  reduce using rule 29 (FunDec)


State 57

   30 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 84
    ParamDec         go to state 37


State 58

   28 FunDec: ID LP error RP .

    $default  reduce using rule 28 (FunDec)


State 59

   26 FunDec: ID LP VarList RP .

    $default  reduce using rule 26 (FunDec)


State 60

   24 VarDec: VarDec LB error RB .

    $default  reduce using rule 24 (VarDec)


State 61

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 62

   34 CompSt: LC error RC .

    $default  reduce using rule 34 (CompSt)


State 63

   44 Stmt: error . SEMI

    SEMI  shift, and go to state 85


State 64

   75 Exp: INT .

    $default  reduce using rule 75 (Exp)


State 65

   77 Exp: OCT .

    $default  reduce using rule 77 (Exp)


State 66

   78 Exp: HEX .

    $default  reduce using rule 78 (Exp)


State 67

   76 Exp: FLOAT .

    $default  reduce using rule 76 (Exp)


State 68

   40 Stmt: RETURN . Exp SEMI
   46     | RETURN . Exp error
   47     | RETURN . error SEMI

    error  shift, and go to state 86
    INT    shift, and go to state 64
    OCT    shift, and go to state 65
    HEX    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 87


State 69

   41 Stmt: IF . LP Exp RP Stmt
   42     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 88


State 70

   43 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 89


State 71

   70 Exp: ID . LP Args RP
   71    | ID . LP RP
   74    | ID .
   90    | ID . LP error RP
   91    | ID . LP error SEMI

    LP  shift, and go to state 90

    $default  reduce using rule 74 (Exp)


State 72

   68 Exp: MINUS . Exp
   88    | MINUS . error

    error  shift, and go to state 91
    INT    shift, and go to state 64
    OCT    shift, and go to state 65
    HEX    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 92


State 73

   69 Exp: NOT . Exp
   89    | NOT . error

    error  shift, and go to state 93
    INT    shift, and go to state 64
    OCT    shift, and go to state 65
    HEX    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 94


State 74

   67 Exp: LP . Exp RP
   87    | LP . error RP

    error  shift, and go to state 95
    INT    shift, and go to state 64
    OCT    shift, and go to state 65
    HEX    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 96


State 75

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 76

   33 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 97


State 77

   36 StmtList: Stmt . StmtList
